source/_static/theme_overrides.css
/* override table width restrictions */
@media screen and (min-width: 767px) {

   .wy-table-responsive table td {
      /* !important prevents the common CSS stylesheets from overriding
         this as on RTD they are loaded after this stylesheet */
      white-space: normal !important;
   }

   .wy-table-responsive {
      overflow: visible !important;
   }
}

.wy-nav-content {
    max-width: 769px !important;
}

.rst-content .sidebar {
 width:45% !important
}

.rst-content .sidebar {
 margin: 0px 24px 24px 24px;
}

/* https://rackerlabs.github.io/docs-rackspace/tools/rtd-tables.html */
/* Center the page and limit width to 1100px */
@media only screen and (min-width: 769px) {
    .wy-body-for-nav {
        /* Center the page's main pane on wide displays for better readability
 * */
        /* `max-width` is (navbar width + main pane width) */
        max-width: 1100px !important;
        margin: 0 auto !important;
    }
}

@media only screen and (min-width: 769px) {
    .wy-nav-side {
        /* Required to center the page on wide displays */
        left: inherit !important;
    }

}@media only screen and (min-width: 769px) {
    .rst-versions {
        /* Required to center the page on wide displays */
        left: inherit !important;
    }
}

.rst-content dl:not(.docutils) dt:first-child {
  margin-top: 0;
}

.rst-content dl:not(.docutils) dl dt {
    margin-bottom: 4px;
    border: none;
    border-left: solid 3px #ccc;
    background: #f0f0f0;
    color: #555;
}

.rst-content dl table,
.rst-content dl ul,
.rst-content dl ol,
.rst-content dl p {
    margin-bottom: 8px !important;
}

.rst-content dl:not(.docutils) dt {
    display: table;
    margin: 6px 0;
    font-size: 90%;
    line-height: normal;
    background: #e7f2fa;
    color: #2980B9;
    border-top: solid 3px #6ab0de;
    padding: 6px;
    position: relative;
}

html.writer-html5 .rst-content dl.field-list {
    display: initial;
}

html.writer-html5 .rst-content dl.field-list>dd,
html.writer-html5 .rst-content dl.field-list>dt {
    margin-bottom: 4px;
    padding-left: 6px;
}

p {
    line-height: 20px;
    font-size: 14px;
}

html.writer-html5 .rst-content dl.field-list>dt:after {
    content: initial;
}

